# subtitle-extract-audio

./: .gitignore  Done.txt  extract_audio.py  pyproject.toml  whisper_audio_to_srt.ipynb
