[project]
name = "subtitle-extract-audio"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeny Kosterin",email = "sparepart74@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
